feat(auth): criar componentes para reset de senha e novo usuário

--- a/portal-angular-auth/src/index.html
+++ b/portal-angular-auth/src/index.html
@@ -7,12 +7,19 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"crossorigin="anonymous">
+
 </head>
 
 <body>
-  <app-root></app-root>
+  <auth-root></auth-root>
 
   <script src="https://unpkg.com/zone.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  
 </body>
 
 </html>
